--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.add-todo-button {
+  position: fixed;
+  bottom: 20px; 
+  right: 20px; 
+}
